--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "dropzonehub",
-  "version": "0.1.0alpha",
+  "version": "0.1.0",
   "description": "Official SDK for collect-files.com",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "scripts": {},
   "author": "jepnet",
   "license": "MIT"
