Update documentation generation timestamps and add build-docs script to package.json

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "description": "Official SDK for collect-files.com",
   "main": "src/index.js",
-  "scripts": {},
+  "scripts": {
+    "build-docs": "npx jsdoc ./src -r -d ./docs"
+  },
   "author": "jepnet",
   "license": "MIT"
 }
