--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Official SDK for collect-files.com",
   "main": "src/index.js",
   "scripts": {
-    "build-docs": "npx jsdoc ./src -r -d ./docs"
+    "build-docs": "npx jsdoc-to-markdown src/**/*.js > docs/API.md"
   },
   "author": "jepnet",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "jsdoc-to-markdown": "^9.1.1"
+  }
 }
